WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200106
REGRESSION (
r243637
): Some web fonts fail to load on Google docs
https://bugs.webkit.org/show_bug.cgi?id=200106
Summary
REGRESSION (r243637): Some web fonts fail to load on Google docs
Ryosuke Niwa
Reported
2019-07-24 19:30:40 PDT
Add a site specific quirk to workaround the workaround Google docs added for Safari for pre-
r243637
behavior. <
rdar://problem/51227600
>
Attachments
Fixes the bug
(6.48 KB, patch)
2019-07-24 19:42 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-07-24 19:42:21 PDT
Created
attachment 374850
[details]
Fixes the bug
EWS Watchlist
Comment 2
2019-07-24 19:45:12 PDT
Attachment 374850
[details]
did not pass style-queue: ERROR: Source/WebCore/css/FontFace.cpp:159: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 3
2019-07-24 20:45:37 PDT
Comment on
attachment 374850
[details]
Fixes the bug Wait a minute, I don’t think this analysis is right.
Geoffrey Garen
Comment 4
2019-07-24 21:34:46 PDT
Comment on
attachment 374850
[details]
Fixes the bug r=me
Ryosuke Niwa
Comment 5
2019-07-25 14:13:48 PDT
(In reply to Ryosuke Niwa from
comment #3
)
> Comment on
attachment 374850
[details]
> Fixes the bug > > Wait a minute, I don’t think this analysis is right.
Never mind. The analysis was correct. I've also confirmed that using Google Chrome UA would not break the website again so if Google fixes their website, it would continue to work.
Ryosuke Niwa
Comment 6
2019-07-25 14:18:05 PDT
Comment on
attachment 374850
[details]
Fixes the bug Clearing flags on attachment: 374850 Committed
r247840
: <
https://trac.webkit.org/changeset/247840
>
Ryosuke Niwa
Comment 7
2019-07-25 14:18:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug